First look at header

--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
     <link href=".\resources\css\style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <head></head>
+    <head>
+      <div class="logo">
+        <img src="resources\css\images\img-tea-cozy-logo.png">
+      </div>
+      <nav>
+        <a href=".mission">Mission</a>
+        <a href=".featured">Featured Tea</a>
+        <a href=".locations">Locations</a>
+      </nav>
+    </head>
+
     <div class="mission"></div>
-    <div class="month"></div>
+
+    <div class="featured"></div>
+
     <div class="locations"></div>
+
     <footer></footer>
   </body>
 </html>
