--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
     <link href=".\resources\css\style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <head>
+    <header>
       <div class="logo">
-        <img src="resources\css\images\img-tea-cozy-logo.png">
+        <img src="resources\images\img-tea-cozy-logo.png" alt="Tea Cozy">
       </div>
-      <nav>
-        <a href=".mission">Mission</a>
-        <a href=".featured">Featured Tea</a>
-        <a href=".locations">Locations</a>
-      </nav>
-    </head>
+      <div class="navigation">
+        <nav>
+          <a href=".mission">Mission</a>
+          <a href=".featured">Featured Tea</a>
+          <a href=".locations">Locations</a>
+        </nav>
+      </div>
+    </header>
 
-    <div class="mission"></div>
+    <div id="mission"></div>
 
-    <div class="featured"></div>
+    <div id="featured"></div>
 
-    <div class="locations"></div>
+    <div id="locations"></div>
 
     <footer></footer>
   </body>
