--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
       </div>
     </header>
 
-    <div id="mission"></div>
+    <div class="mission">
+      <div class="missioncontent">
+        <div class="missionconentbackground">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+    </div>
 
-    <div id="featured"></div>
+    <div class="featured"></div>
 
-    <div id="locations"></div>
+    <div class"="locations"></div>
 
     <footer></footer>
   </body>
