--- a/index.html
+++ b/index.html
@@ -28,7 +28,26 @@
       </div>
     </div>
 
-    <div class="featured"></div>
+    <div class="featured">
+      <div class="teamonth">
+        <div id="monthtext">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+        </div>
+      </div>
+      <div class="teapics">
+        <img src="resources\images\img-berryblitz.jpg" alt="Berry Blitz">
+        <h4>Fall Berry Blitz Tea</h4>
+        <img src="resources\images\img-spiced-rum.jpg" alt="Spiced Rum">
+        <h4>Spiced Rum Tea</h4>
+        <img src="resources\images\img-donut.jpg" alt="Donut">
+        <h4>Seasonal Donuts</h4>
+        <img src="resources\images\img-myrtle-ave.jpg" alt="Donut">
+        <h4>Myrtle Ave Tea</h4>
+        <img src="resources\images\img-bedford-bizarre.jpg" alt="Bedford Bizarre">
+        <h4>Bedford Bizarre Tea</h4>
+      </div>
+    </div>
 
     <div class"="locations"></div>
 
