Focusing on centering location background pic

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Tea Cozy</title>
     <link href=".\resources\css\style.css" type="text/css" rel="stylesheet">
   </head>
+
   <body>
+<!--Header section-->
     <header>
       <div class="logo">
         <img src="resources\images\img-tea-cozy-logo.png" alt="Tea Cozy">
@@ -19,6 +21,7 @@
       </div>
     </header>
 
+<!--Main body setion-->
     <div class="mission">
       <div class="missioncontent">
         <div class="missionconentbackground">
@@ -29,28 +32,58 @@
     </div>
 
     <div class="featured">
-      <div class="teamonth">
-        <div id="monthtext">
-          <h2>Tea of the Month</h2>
-          <h4>What's Steeping at The Tea Cozy?</h4>
-        </div>
+      <div class="monthtext">
+        <h2>Tea of the Month</h2>
+        <h3>What's Steeping at The Tea Cozy?</h3>
       </div>
-      <div class="teapics">
+    </div>
+    <div class="teapics">
+      <div class="pics">
         <img src="resources\images\img-berryblitz.jpg" alt="Berry Blitz">
         <h4>Fall Berry Blitz Tea</h4>
+      </div>
+      <div class="pics">
         <img src="resources\images\img-spiced-rum.jpg" alt="Spiced Rum">
         <h4>Spiced Rum Tea</h4>
+      </div>
+      <div class="pics">
         <img src="resources\images\img-donut.jpg" alt="Donut">
         <h4>Seasonal Donuts</h4>
+      </div>
+      <div class="pics">
         <img src="resources\images\img-myrtle-ave.jpg" alt="Donut">
         <h4>Myrtle Ave Tea</h4>
+      </div>
+      <div class="pics">
         <img src="resources\images\img-bedford-bizarre.jpg" alt="Bedford Bizarre">
         <h4>Bedford Bizarre Tea</h4>
       </div>
     </div>
 
-    <div class"="locations"></div>
+    <div class="locations">
+  <!--      <h2>Locations</h2>
+        <div class="locs">
+          <h3>Downtown</h3>
+          <h4>384 West 4th St</h4>
+          <h4>Suite 108</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+        <div class="locs">
+          <h3>East Bayside</h3>
+          <h4>3433 Phisherman's Avenue</h4>
+          <h4>(Northwest Corner)</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+        <div class="locs">
+          <h3>Oakdale</h3>
+          <h4>515 Crescent Avenue</h4>
+          <h4>Second Floor</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+-->
+    </div>
 
+<!--Footer section-->
     <footer></footer>
   </body>
 </html>
