--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
 <!--Main body setion-->
-    <div class="mission">
+    <div class="mission flexcenter">
       <div class="missioncontent">
         <div class="missionconentbackground">
           <h2>Our Mission</h2>
@@ -60,8 +60,9 @@
       </div>
     </div>
 
-    <div class="locations">
-  <!--      <h2>Locations</h2>
+    <div class="locations flexcenter">
+      <div class="locscontent">
+        <h2>Locations</h2>
         <div class="locs">
           <h3>Downtown</h3>
           <h4>384 West 4th St</h4>
@@ -80,7 +81,7 @@
           <h4>Second Floor</h4>
           <h4>Portland, Maine</h4>
         </div>
--->
+      </div>
     </div>
 
 <!--Footer section-->
