--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
     </div>
 
 <!--Footer section-->
-    <footer></footer>
+    <footer>
+      <div id="footinfo" class="flexcenter">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+      <div id="copy">
+        <h5>copyright The Tea Cozy 2017</h5>
+      </div>
+    </footer>
   </body>
 </html>
